--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <p id="txt">Aviator</p>
 </div>
 <div id="img-div">
-	<img id="img" src="amelia.jpg" alt="Amelia's first flight">
+	<img id="img" src="./amelia.jpg" alt="Amelia's first flight">
 	<blockquote id="img-caption">"The most difficult thing is the decision to act, the rest is merely tenacity.
 	                    Fears are paper tigers. You can do anything you decide to do. You can act to 
 	                    change and control your life; and the procedure, the process is its own reward."</blockquote>
